[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1"]

[node name="HUD" type="Control"]
script = ExtResource(1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(320, 0)

[node name="HBoxStats" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)

[node name="HP" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxStats"]
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
text = "HP"

[node name="STA" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxStats"]
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
text = "STA"

[node name="LGT" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxStats"]
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
text = "LGT"

[node name="InventoryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Inventory"

[node name="EclipseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Eclipse: 12"

[node name="CaptionPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.9
margin_left = 16.0
margin_top = -32.0
margin_right = -16.0
margin_bottom = -16.0

[node name="CaptionLabel" type="Label" parent="CaptionPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
text = "Caption"

[node name="MessagePanel" type="Panel" parent="."]
anchors_preset = 2
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -150.0
margin_right = 150.0
margin_bottom = 80.0

[node name="MessageLabel" type="Label" parent="MessagePanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
text = ""

[node name="CaptionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
